# AI-Podcast-Generator

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Besprechen.txt  Dockerfile  Dockerfile.test  README.md  config.py  database.py  deploy.sh  docker-compose.yml  init_db.py  llm_test_main.py  main.py  mock_ui.py  model.py  models.py  nginx.conf  plan.md  pyproject.toml  requirements.txt  test_main_tts_service.py  test_real_db.py  test_workflow.py  ui.py
Frontend/: controller.py  style.css  ui.py  ui_handlers.py
Interfaces/: IServices.py  interface_tts_service.py
database/: database.py  init_db.py  models.py  voices.py
frontend/: controller.py  style.css  ui.py  ui_handlers.py
interfaces/: iservices.py
repositories/: __init__.py  base_repo.py  file_repo.py  job_repo.py  model_repo.py  podcast_repo.py  text_repo.py  user_repo.py  voice_repo.py
scripts/: podcast_2025-12-05_12-40-57.txt  podcast_2025-12-05_12-44-57.txt  podcast_2025-12-08_22-22-50.txt  podcast_2025-12-11_23-01-35.txt  podcast_2025-12-12_10-24-13.txt  podcast_2025-12-12_13-07-42.txt  podcast_2025-12-12_13-08-37.txt  podcast_2025-12-12_16-07-29.txt  podcast_2025-12-12_16-16-46.txt  podcast_2025-12-13_17-53-30.txt  podcast_2025-12-13_18-08-36.txt  podcast_2025-12-13_18-12-00.txt  podcast_2025-12-13_18-13-48.txt
services/: email_service.py  exceptions.py  input_processing.py  llm_service.py  login_service.py  tts_service.py  ui_backend.py  workflow.py
test_klassen/: test_llm_service.py  test_tts_service.py
tests/: dummies.py  llm_test_main.py  mainWorkflow.py  mock_backendUi.py  (+10 more)
(+1 files in other folders)
